@@ -1,6 +1,8 @@
 #$Rev$
 
 [On going]
+1. Fix the bug of optional-closing tags.
+2. Add __destruct().
 
 
 [PHP Simple HTML DOM Parser v0.98 is released]
